[package]
name = "mas-axum-utils"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
axum.workspace = true
axum-extra.workspace = true
base64ct.workspace = true
chrono.workspace = true
headers.workspace = true
http.workspace = true
icu_locid = "1.5.0"
mime = "0.3.17"
rand.workspace = true
reqwest.workspace = true
sentry.workspace = true
serde.workspace = true
serde_with = "3.12.0"
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
ulid.workspace = true

oauth2-types.workspace = true
mas-data-model.workspace = true
mas-http.workspace = true
mas-iana.workspace = true
mas-jose.workspace = true
mas-keystore.workspace = true
mas-storage.workspace = true
mas-templates.workspace = true
