[package]
name = "mas-config"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true

camino = { workspace = true, features = ["serde1"] }
chrono.workspace = true
figment.workspace = true
hex.workspace = true
ipnetwork = { version = "0.20.0", features = ["serde", "schemars"] }
lettre.workspace = true
schemars.workspace = true
ulid.workspace = true
url.workspace = true

serde.workspace = true
serde_with = { version = "3.12.0", features = ["hex", "chrono"] }
serde_json.workspace = true

pem-rfc7468 = "0.7.0"
rustls-pki-types = "1.12.0"
rustls-pemfile = "2.2.0"
rand.workspace = true
rand_chacha.workspace = true

indoc = "2.0.6"

governor.workspace = true

mas-jose.workspace = true
mas-keystore.workspace = true
mas-iana.workspace = true

[features]
docker = []
dist = []

[[bin]]
name = "schema"
doc = false
