[package]
name = "mas-data-model"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
base64ct.workspace = true
chrono.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true
crc = "3.3.0"
ulid.workspace = true
rand.workspace = true
regex = "1.11.1"
woothee = "0.13.0"
ruma-common.workspace = true

mas-iana.workspace = true
mas-jose.workspace = true
oauth2-types.workspace = true
