# Copyright 2025 New Vector Ltd.
#
# SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
# Please see LICENSE files in the repository root for full details.

[package]
name = "mas-handlers"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
aide.workspace = true
anyhow.workspace = true
argon2.workspace = true
async-graphql.workspace = true
async-trait.workspace = true
axum-extra.workspace = true
axum-macros.workspace = true
axum.workspace = true
base64ct.workspace = true
bcrypt.workspace = true
camino.workspace = true
chrono.workspace = true
elliptic-curve.workspace = true
futures-util.workspace = true
governor.workspace = true
headers.workspace = true
hex.workspace = true
hyper.workspace = true
icu_normalizer.workspace = true
indexmap.workspace = true
lettre.workspace = true
mime.workspace = true
minijinja-contrib.workspace = true
minijinja.workspace = true
opentelemetry-semantic-conventions.workspace = true
opentelemetry.workspace = true
pbkdf2.workspace = true
pkcs8.workspace = true
psl.workspace = true
rand_chacha.workspace = true
rand.workspace = true
reqwest.workspace = true
rustls.workspace = true
schemars.workspace = true
sentry.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
serde_with.workspace = true
serde.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio-util.workspace = true
tokio.workspace = true
tower-http.workspace = true
tower.workspace = true
tracing.workspace = true
ulid.workspace = true
url.workspace = true
zeroize.workspace = true

mas-axum-utils.workspace = true
mas-config.workspace = true
mas-context.workspace = true
mas-data-model.workspace = true
mas-email.workspace = true
mas-http.workspace = true
mas-i18n.workspace = true
mas-iana.workspace = true
mas-jose.workspace = true
mas-keystore.workspace = true
mas-matrix.workspace = true
mas-oidc-client.workspace = true
mas-policy.workspace = true
mas-router.workspace = true
mas-storage.workspace = true
mas-storage-pg.workspace = true
mas-tasks.workspace = true
mas-templates.workspace = true
oauth2-types.workspace = true
zxcvbn.workspace = true

tchap.workspace = true

[dev-dependencies]
insta.workspace = true
tracing-subscriber.workspace = true
cookie_store.workspace = true
sqlx.workspace = true
wiremock.workspace = true
