# Copyright 2025 New Vector Ltd.
#
# SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
# Please see LICENSE files in the repository root for full details.

[package]
name = "mas-i18n-scan"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
camino.workspace = true
clap.workspace = true
minijinja.workspace = true
serde_json.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
walkdir.workspace = true

mas-i18n.workspace = true
