[package]
name = "mas-i18n"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
camino.workspace = true
icu_calendar = "2.0.0"
icu_datetime = "2.0.0"
icu_experimental = "0.3.0"
icu_locale = "2.0.0"
icu_plurals = "2.0.0"
icu_provider = "2.0.0"
icu_provider_adapters = "2.0.0"
icu_time = "2.0.0"
pad = "0.1.6"
pest = "2.8.0"
pest_derive = "2.8.0"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
