[package]
name = "mas-jose"
description = "JSON Object Signing and Encryption (JWT & co) utilities"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
base64ct = { version = "1.8.0", features = ["std"] }
chrono.workspace = true
digest = "0.10.7"
ecdsa = { version = "0.16.9", features = ["signing", "verifying"] }
elliptic-curve.workspace = true
generic-array = "0.14.7"
hmac = "0.12.1"
k256 = { version = "0.13.4", features = ["ecdsa"] }
p256 = { version = "0.13.2", features = ["ecdsa"] }
p384 = { version = "0.13.1", features = ["ecdsa"] }
rand.workspace = true
rsa = "0.9.8"
schemars.workspace = true
sec1 = "0.7.3"
serde.workspace = true
serde_json.workspace = true
serde_with = "3.12.0"
sha2.workspace = true
signature = "2.2.0"
thiserror.workspace = true
url.workspace = true

mas-iana.workspace = true

[dev-dependencies]
insta.workspace = true
rand_chacha.workspace = true
