# Copyright 2026 Element Creations Ltd.
#
# SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
# Please see LICENSE files in the repository root for full details.

[package]
name = "mas-jwks-cache"
description = "Shared JWKS cache and per-URI request coalescer for the Matrix Authentication Service"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
headers.workspace = true
http.workspace = true
reqwest.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true

mas-data-model.workspace = true
mas-http.workspace = true
mas-jose.workspace = true
mas-iana.workspace = true
mas-storage.workspace = true

[dev-dependencies]
mas-storage-pg.workspace = true
sqlx.workspace = true
wiremock.workspace = true
