[package]
name = "mas-keystore"
description = "Secret keys store used by the Matrix Authentication Service"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
aead = { version = "0.5.2", features = ["std"] }
const-oid = { version = "0.9.6", features = ["std"] }
der = { version = "0.7.9", features = ["std"] }
elliptic-curve.workspace = true
k256.workspace = true
p256.workspace = true
p384.workspace = true
pem-rfc7468.workspace = true
pkcs1.workspace = true
pkcs8.workspace = true
rand.workspace = true
rsa = { version = "0.9.8", features = ["std", "pem"] }
sec1 = { version = "0.7.3", features = ["std"] }
spki = { version = "0.7.3", features = ["std"] }
thiserror.workspace = true
generic-array = "0.14.7"
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
base64ct = "1.6.0"

mas-iana.workspace = true
mas-jose.workspace = true

[dev-dependencies]
insta.workspace = true
rand_chacha.workspace = true
