[package]
name = "mas-keystore"
description = "Secret keys store used by the Matrix Authentication Service"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
aead.workspace = true
base64ct.workspace = true
chacha20poly1305.workspace = true
const-oid.workspace = true
der.workspace = true
elliptic-curve.workspace = true
generic-array.workspace = true
k256.workspace = true
p256.workspace = true
p384.workspace = true
pem-rfc7468.workspace = true
pkcs1.workspace = true
pkcs8.workspace = true
rand.workspace = true
rsa.workspace = true
sec1.workspace = true
spki.workspace = true
thiserror.workspace = true

mas-iana.workspace = true
mas-jose.workspace = true

[dev-dependencies]
insta.workspace = true
rand_chacha.workspace = true
