[package]
name = "mas-listener"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
bytes.workspace = true
futures-util.workspace = true
http-body.workspace = true
hyper = { workspace = true, features = ["server"] }
hyper-util.workspace = true
pin-project-lite = "0.2.16"
socket2 = "0.5.9"
thiserror.workspace = true
tokio.workspace = true
tokio-rustls = "0.26.2"
tokio-util.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true

[dev-dependencies]
anyhow.workspace = true
rustls-pemfile = "2.2.0"
tokio.workspace = true
tokio-test = "0.4.4"
tracing-subscriber.workspace = true

[[example]]
name = "demo"
path = "examples/demo/main.rs"
