[package]
name = "mas-listener"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
bytes.workspace = true
futures-util.workspace = true
http-body.workspace = true
hyper-util.workspace = true
hyper.workspace = true
pin-project-lite.workspace = true
socket2.workspace = true
thiserror.workspace = true
tokio-rustls.workspace = true
tokio-util.workspace = true
tokio.workspace = true
tower-http.workspace = true
tower.workspace = true
tracing.workspace = true

mas-context.workspace = true

[dev-dependencies]
anyhow.workspace = true
rustls-pemfile.workspace = true
tokio-test.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true

[[example]]
name = "demo"
path = "examples/demo/main.rs"
