# Copyright 2025 New Vector Ltd.
#
# SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
# Please see LICENSE files in the repository root for full details.

[package]
name = "oauth2-types"
description = "OAuth 2.0 types used by the Matrix Authentication Service"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
base64ct.workspace = true
chrono.workspace = true
indexmap.workspace = true
language-tags.workspace = true
serde_json.workspace = true
serde_with.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
url.workspace = true

mas-iana.workspace = true
mas-jose.workspace = true

[dev-dependencies]
assert_matches.workspace = true
insta.workspace = true
