[package]
name = "mas-oidc-client"
description = "OpenID Connect client library used by the Matrix Authentication Service"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
base64ct = { version = "1.8.0", features = ["std"] }
chrono.workspace = true
elliptic-curve.workspace = true
form_urlencoded = "1.2.1"
headers.workspace = true
http.workspace = true
language-tags = "0.3.2"
mime = "0.3.17"
p256.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_urlencoded = "0.7.1"
thiserror.workspace = true
tracing.workspace = true
url.workspace = true

mas-http.workspace = true
mas-iana.workspace = true
mas-jose.workspace = true
mas-keystore.workspace = true
oauth2-types.workspace = true

[dev-dependencies]
assert_matches = "1.5.0"
bitflags.workspace = true
rand_chacha.workspace = true
tokio.workspace = true
wiremock.workspace = true
http-body-util.workspace = true
rustls.workspace = true
