[package]
name = "mas-router"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
axum.workspace = true
serde_urlencoded.workspace = true
serde.workspace = true
ulid.workspace = true
url.workspace = true
