[package]
name = "mas-storage-pg"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
futures-util.workspace = true
opentelemetry-semantic-conventions.workspace = true
opentelemetry.workspace = true
rand_chacha.workspace = true
rand.workspace = true
sea-query-binder.workspace = true
sea-query.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tracing.workspace = true
ulid.workspace = true
url.workspace = true
uuid.workspace = true

oauth2-types.workspace = true
mas-storage.workspace = true
mas-data-model.workspace = true
mas-iana.workspace = true
mas-jose.workspace = true
