# Copyright 2025 New Vector Ltd.
#
# SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
# Please see LICENSE files in the repository root for full details.

[package]
name = "mas-storage"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
futures-util.workspace = true
opentelemetry.workspace = true
rand_core.workspace = true
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing-opentelemetry.workspace = true
tracing.workspace = true
ulid.workspace = true
url.workspace = true

oauth2-types.workspace = true
mas-data-model.workspace = true
mas-iana.workspace = true
mas-jose.workspace = true
