[package]
name = "syn2mas"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror.workspace = true
thiserror-ext.workspace = true
tokio.workspace = true
sqlx.workspace = true
chrono.workspace = true
compact_str.workspace = true
tracing.workspace = true
futures-util = "0.3.30"

rand.workspace = true
uuid = "1.10.0"
ulid = { workspace = true, features = ["uuid"] }

[dev-dependencies]
mas-storage-pg.workspace = true

anyhow.workspace = true
insta.workspace = true
serde.workspace = true

[lints]
workspace = true
